# financas-pessoais

./: .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py
templates/base/: base.html  base_login.html  footer.html  navbar.html
usuarios/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py
usuarios/templates/registration/: login.html
usuarios/templates/usuarios/: cadastro.html
