[tool.poetry]
name = "financas-pessoais"
version = "0.1.0"
description = "App para controle financeiro pessoal"
authors = ["Marcio Ribeiro de Oliveira - 2119504 <marcio.oliveira@ifro.edu.br>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "financas_pessoais"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
